--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
        body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #02000a;
             margin: 0;
             padding: 0;
             display: flex;
@@ -14,11 +14,12 @@
             font-family: monospace;
             font-size: 16px;
             text-align: center;
+            color: #f5f5dc
         }
         .projects {
             margin-top: 20px;
             padding: 20px;
-            background-color: #fff;
+            background-color: #3d5ea5;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             max-width: 600px;
