--- a/style.css
+++ b/style.css
@@ -1,36 +1,45 @@
-       body {
-            font-family: Arial, sans-serif;
-            background-color: #02000a;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        .logo {
-            white-space: pre;
-            font-family: monospace;
-            font-size: 16px;
-            text-align: center;
-            color: #f5f5dc
-        }
-        .projects {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #3d5ea5;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-        }
-        .projects h2 {
-            margin-top: 0;
-        }
-        .projects ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .projects li {
-            margin-bottom: 10px;
-        }
+body {
+    font-family: Arial, sans-serif;
+    background-color: #02000a;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+.logo {
+    white-space: pre;
+    font-family: monospace;
+    font-size: 16px;
+    text-align: center;
+    color: #f5f5dc;
+}
+.projects {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #18181885;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    color: #00e501;
+}
+.projects h2 {
+    margin-top: 0;
+}
+.projects ul {
+    list-style-type: none;
+    padding: 0;
+}
+.projects li {
+    margin-bottom: 10px;
+}
+footer {
+    background-color: #02000a;
+    padding: 20px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
