--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
     font-family: monospace;
     font-size: 16px;
     text-align: center;
-    color: #f5f5dc;
+    /*color: #f5f5dc;*/
+    color: #ffffff;
 }
 .projects {
     margin-top: 20px;
@@ -42,5 +43,6 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    color: #f5f5dc;
+    /*color: #f5f5dc;*/
+    color: #ffffff;
 }
