--- a/style.css
+++ b/style.css
@@ -63,9 +63,7 @@ footer {
 }
 
 .message-group {
-    margin-top: 1em;
-}
-
+    margin-top: 1em; }
 input, textarea {
     width: 100%;
     padding: 0.5em;
